[build-system]
requires = ["setuptools>=42", "xdg-base-dirs~=6.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-cli"
version = "0.3"
authors = [
    { name = "Vivek Jha", email = "vivek.x.jha@gmail.com" }
]
description = "Simple yet effective command line client for chatting with ChatGPT using the official API." 
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["scripts", "dependencies"]
